--- a/app/src/main/res/layout/activity_learning.xml
+++ b/app/src/main/res/layout/activity_learning.xml
@@ -8,7 +8,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/textView">
 
         <TableRow
             android:layout_width="match_parent"
@@ -88,6 +89,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:text="진행중입니다..."
         android:textAlignment="center" />
 </android.support.constraint.ConstraintLayout>
