--- a/app/src/main/res/layout/activity_filter_select.xml
+++ b/app/src/main/res/layout/activity_filter_select.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/scrollView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/alert_light_frame" />
 
     <HorizontalScrollView
@@ -40,7 +41,7 @@
                     android:id="@+id/filter_text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="고흐(풍경)"
                     app:layout_constraintTop_toBottomOf="@id/filter1" />
             </android.support.constraint.ConstraintLayout>
 
@@ -61,7 +62,7 @@
                     android:id="@+id/filter_text2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="고흐(인물)"
                     app:layout_constraintTop_toBottomOf="@id/filter2" />
             </android.support.constraint.ConstraintLayout>
 
@@ -82,7 +83,7 @@
                     android:id="@+id/filter_text3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="모네(풍경)"
                     app:layout_constraintTop_toBottomOf="@id/filter3" />
             </android.support.constraint.ConstraintLayout>
 
@@ -103,7 +104,7 @@
                     android:id="@+id/filter_text4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="모네(인물)"
                     app:layout_constraintTop_toBottomOf="@id/filter4" />
             </android.support.constraint.ConstraintLayout>
 
