--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#782808</color>
     <color name="colorPrimaryDark">#511b01</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="background">#000000</color>
+    <color name="background">#eda95f</color>
 </resources>
