--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context="com.example.masterpiece.masterpiece.MainActivity">
 
-    <Button
+    <ImageView
         android:id="@+id/camera_btn"
-        android:layout_width="match_parent"
+        android:layout_width="191dp"
         android:layout_height="wrap_content"
-        android:text="사진 찍기"
-        android:onClick="onClickCamera"/>
+        android:onClick="onClickCamera"
+        android:src="@drawable/camera"
+        android:padding="30dp"
+        android:text="사진 찍기" />
 
-    <Button
+    <ImageView
         android:id="@+id/gallery_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="갤러리에서 불러오기"
-        android:onClick="onClickGallery"/>
+        android:onClick="onClickGallery"
+        android:src="@drawable/gallery"
+        android:padding="30dp"
+
+        android:text="갤러리에서 불러오기" />
 </LinearLayout>
